@@ -134,3 +134,4 @@ v1.4
 v2.0
 ===
 - Upgraded to need Java 1.8 (hence the major version number)
+- Added generic annotation/setter based parsing
